finished mobile phase 2 changes
