# Modules/Users/app/Http/Requests/Api/OverTime/StoreUserOverTimeRequest.php
@@ -1,10 +1,10 @@
 <?php
 
-namespace Modules\Users\Http\Requests\Api\Excuses;
+namespace Modules\Users\Http\Requests\Api\OverTime;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class StoreExcusesRequest extends FormRequest
+class StoreUserOverTimeRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -25,9 +25,8 @@ class StoreExcusesRequest extends FormRequest
             'date' => 'required|date_format:Y-m-d', // Validate date format
             'from' => 'required|date_format:H:i',  // Validate time format
             'to' => 'required|date_format:H:i',   // Validate time format
-
+            'reason' => 'required|String',   // Validate time format
             'status' => 'nullable|in:pending,approved,rejected', // Optional status field
         ];
     }
-
 }
